[package]
name = 'serialxy'
version = '0.1.5'
edition = '2018'
authors = ['Xiaoqing Ma <rede1997@outlook.com>']
license = 'MIT'
description = 'Serial port proxy, a proxy tool to help you to connect remote serial port by telnet'
homepage = 'https://github.com/rede97/serialxy'
repository = 'https://github.com/rede97/serialxy'
include = [
    'Cargo.toml',
    'src/**/*.rs',
    'README.md',
]
keywords = [
    'serial',
    'tty',
    'UART',
]
readme = 'README.md'

[dependencies]
mio-serial = "5.0.1"

[dependencies.mio]
version = '0.8'
features = [
    'os-poll',
    'os-ext',
    'net',
]